clusters/talos-robbinsdale/apps-flux/media/app/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:latest
        ports:
        - name: http
          containerPort: 6767
          protocol: TCP
        volumeMounts:
        - name: movies-volume
          mountPath: /movies
        - name: tv-volume
          mountPath: /tv
        - name: config-volume
          mountPath: /config
      volumes:
      - name: movies-volume
        persistentVolumeClaim:
          claimName: radarr-movies-unas
      - name: tv-volume
        persistentVolumeClaim:
          claimName: sonarr-tv-unas
      - name: config-volume
        persistentVolumeClaim:
          claimName: bazarr-config-ceph
