clusters/talos-robbinsdale/apps-flux/media/app/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  selector:
    app: bazarr
  ports:
  - name: http
    port: 6767
    protocol: TCP
    targetPort: 6767
  type: ClusterIP
